--- a/app/src/main/res/layout/activity_car_calculation.xml
+++ b/app/src/main/res/layout/activity_car_calculation.xml
@@ -36,15 +36,15 @@
                     android:layout_weight="2"
                     android:background="#4498BE"
                     android:layout_height="0dp">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="522dp"
-                        android:paddingBottom="20dp"
-                        android:text="Motor Vechile New Registeration Cost Calculate"
-                        android:textSize="25sp"
-                        android:textStyle="bold">
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="522dp"-->
+<!--                        android:paddingBottom="20dp"-->
+<!--                        android:text="Motor Vechile New Registeration Cost Calculate"-->
+<!--                        android:textSize="25sp"-->
+<!--                        android:textStyle="bold">-->
 
-                    </TextView>
+<!--                    </TextView>-->
 
 
                 </LinearLayout>
